--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@ body {
   background-color: rgb(33, 83, 83);
 }
 
+.mainheader {
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 img {
   border: solid black 20px;
 }
