--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+
 body {
   background-color: rgb(33, 83, 83);
+}
+
+p {
+  background-color: beige;
 }
 
 .mainheader {
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 
 img {
   border: solid black 20px;
+  width: 100%;
 }
 
-.column {
-  float: left;
-  width: 300px;
-}
-
-.column img {
-  width: 80%;
+.exciting {
+  font-family: 'monoton';
+  background-color: blueviolet;
+  color: rgb(247, 255, 133);
+  border: solid beige 10px;
 }
 
 
